# coder-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cache.env.test  mkdocs.yml  pyproject.toml  test-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pipeline.yml
coderfastapi/: test.py
coderfastapi/handlers/: version.py
coderfastapi/lib/: decorators.py  logging.py  requests.py  router.py  security.py  signature.py
coderfastapi/lib/decorators/: __init__.py  pagination.py  util.py
coderfastapi/lib/logging/: __init__.py  context.py  filter.py  middleware.py
coderfastapi/lib/security/: __init__.py  acl.py  session.py
coderfastapi/lib/security/policies/authentication/: __init__.py  session.py  user.py
coderfastapi/lib/security/policies/authentication/jwt/: __init__.py
coderfastapi/lib/security/policies/authentication/jwt/providers/: __init__.py  expiration.py  recovery.py  user.py
coderfastapi/lib/security/policies/authorization/: __init__.py  user.py
coderfastapi/lib/security/session/: __init__.py  base.py  user.py
coderfastapi/lib/validation/schemas/: __init__.py  aggregation.py  pagination.py  query.py  request.py  version.py
coderfastapi/logging/: __init__.py  context.py  filter.py  middleware.py
docs/reference/: decorators.md  handlers.md  logging.md  router.md  schemas.md  security.md  test.md
tests/: __init__.py  asserts.py  conftest.py
tests/handlers/: test_version.py
tests/lib/: test_decorators.py  test_requests.py  test_router.py  test_signature.py
tests/lib/decorators/: test_decorators.py  test_pagination.py
tests/lib/logging/: test_context.py  test_filter.py  test_logging.py  test_middleware.py
tests/lib/security/: __init__.py  conftest.py  test_acl.py  test_session.py
tests/lib/security/policies/authentication/: test_jwt.py  test_session.py  test_user.py
tests/lib/security/policies/authentication/jwt/: test_jwt.py
tests/lib/security/policies/authentication/jwt/providers/: test_expiration.py  test_recovery.py  test_user.py
tests/lib/security/policies/authorization/: __init__.py  conftest.py  test_authorization.py  test_user.py
tests/lib/validation/schemas/: test_aggregation.py  test_pagination.py  test_query.py  test_request.py  test_version.py
tests/logging/: test_context.py  test_filter.py  test_logging.py  test_middleware.py
