[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "coderfastapi"
version = "0.3.1"
description = "coderfastapi"
readme = "README.md"
authors = [{ name = "Code R", email = "hello@coderstudio.dev" }]
dependencies = [
    'codercore ~= 0.3'
]

[tool.bumpver]
current_version = "0.3.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
