[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "coderfastapi"
version = "0.5.0"
description = "coderfastapi"
readme = "README.md"
authors = [{ name = "Code R", email = "hello@coderstudio.dev" }]
dependencies = [
    'codercore ~= 1.0',
    'fastapi[all] ~= 0.89',
    'pydantic ~= 1.10'
]

[project.optional-dependencies]
test = [
    'pytest ~= 7.2',
    'pytest-cov ~= 4.0',
    'pytest-xdist[psutil] ~= 3.1',
]
dev = [
    'black ~= 22.12'
]

[tool.bumpver]
current_version = "0.5.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
